Extend ODBC Data Source config dialog with new connection options. WIP

--- a/clients/odbc/winsetup/setup.rc
+++ b/clients/odbc/winsetup/setup.rc
@@ -103,27 +103,45 @@ END
 // Dialog
 //
 
-IDD_SETUP_DIALOG DIALOGEX 0, 0, 210, 179
+IDD_SETUP_DIALOG DIALOGEX 0, 0, 210, 323
 STYLE DS_MODALFRAME | WS_CAPTION
 CAPTION "MonetDB Data Source Configuration"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
     EDITTEXT        IDC_EDIT_DSN,75,40,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_UID,75,56,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PWD,75,72,128,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PWD,75,72,128,14,ES_AUTOHSCROLL | ES_PASSWORD
     EDITTEXT        IDC_EDIT_HOST,75,88,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PORT,75,104,128,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_DATABASE,75,120,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_LOGFILE,75,136,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SCHEMA,75,136,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_AUTOCOMMIT,75,152,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_REPLYSIZE,75,168,128,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TIMEZONE,75,184,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_LOGFILE,75,200,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_TLS,75,216,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SERVERCERT,75,232,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SERVERCERTHASH,75,248,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_CLIENTKEY,75,264,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_CLIENTCERT,75,280,128,14,ES_AUTOHSCROLL
     LTEXT           "Data Source Name",IDC_STATIC,7,42,63,8
     LTEXT           "User Name",IDC_STATIC,7,58,36,8
     LTEXT           "Password",IDC_STATIC,7,74,32,8
     LTEXT           "Host",IDC_STATIC,7,90,16,8
     LTEXT           "Port",IDC_STATIC,7,106,14,8
     LTEXT           "Database",IDC_STATIC,7,122,32,8
-    LTEXT           "Logfile",IDC_STATIC,7,138,32,8
-    DEFPUSHBUTTON   "OK",IDOK,7,157,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,153,157,50,14
+    LTEXT           "Schema",IDC_STATIC,7,138,32,8
+    LTEXT           "Autocommit On/Off",IDC_STATIC,7,154,63,8
+    LTEXT           "Reply Size",IDC_STATIC,7,170,32,8
+    LTEXT           "Timezone",IDC_STATIC,7,186,32,8
+    LTEXT           "Logfile",IDC_STATIC,7,202,32,8
+    LTEXT           "TLS Encrypt On/Off",IDC_STATIC,7,218,66,8
+    LTEXT           "Server Certificate",IDC_STATIC,7,234,66,8
+    LTEXT           "Server Certificate Hash",IDC_STATIC,7,250,70,8
+    LTEXT           "Client Key",IDC_STATIC,7,266,36,8
+    LTEXT           "Client Certificate",IDC_STATIC,7,282,66,8
+    DEFPUSHBUTTON   "OK",IDOK,7,301,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,153,301,50,14
     CONTROL         2000,IDC_STATIC,"Static",SS_BITMAP,0,0,240,37
 END
 
