Extend ODBC Data Source config dialog with new connection options.

--- a/clients/odbc/winsetup/setup.rc
+++ b/clients/odbc/winsetup/setup.rc
@@ -119,7 +119,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_REPLYSIZE,75,168,128,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_TIMEZONE,75,184,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_LOGFILE,75,200,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_TLS,75,216,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_USETLS,75,216,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SERVERCERT,75,232,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_SERVERCERTHASH,75,248,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_CLIENTKEY,75,264,128,14,ES_AUTOHSCROLL
@@ -131,11 +131,11 @@ BEGIN
     LTEXT           "Port",IDC_STATIC,7,106,14,8
     LTEXT           "Database",IDC_STATIC,7,122,32,8
     LTEXT           "Schema",IDC_STATIC,7,138,32,8
-    LTEXT           "Autocommit On/Off",IDC_STATIC,7,154,63,8
+    LTEXT           "Autocommit on/off",IDC_STATIC,7,154,63,8
     LTEXT           "Reply Size",IDC_STATIC,7,170,32,8
-    LTEXT           "Timezone",IDC_STATIC,7,186,32,8
-    LTEXT           "Logfile",IDC_STATIC,7,202,32,8
-    LTEXT           "TLS Encrypt On/Off",IDC_STATIC,7,218,66,8
+    LTEXT           "Time Zone",IDC_STATIC,7,186,32,8
+    LTEXT           "Log File",IDC_STATIC,7,202,32,8
+    LTEXT           "TLS Encrypt on/off",IDC_STATIC,7,218,66,8
     LTEXT           "Server Certificate",IDC_STATIC,7,234,66,8
     LTEXT           "Server Certificate Hash",IDC_STATIC,7,250,70,8
     LTEXT           "Client Key",IDC_STATIC,7,266,36,8
