Refuse to start if geom incompatibility found + option to start anyway. If server has geom, but database was created without, refuse to start up.  But add option --without-geom to start up without geom support. The other way round, database was created with geom, but server does not support it already gave an error. This fixes #7518.

--- a/tools/mserver/mserver5.1.in
+++ b/tools/mserver/mserver5.1.in
@@ -121,6 +121,18 @@ Load extra module in the form of a dynamic link library (.dll or .so
 file) which should be located in the lib/monetdb5 directory.
 This option can be repeated for different modules.
 .TP
+.B \-\-without\-geom
+Start the server without 
+.I geom
+support, even if it is available.
+Normally the server will refuse to start if
+.I geom
+is loaded, but the
+database was created by a server without
+.I geom
+support.
+With this option it is possible to start the server anyway.
+.TP
 .B \-\-help
 Print list of options.
 .TP
