--- a/clients/odbc/winsetup/setup.rc
+++ b/clients/odbc/winsetup/setup.rc
@@ -104,18 +104,18 @@ END
 //
 // X, Y, WIDTH, HEIGHT
 
-IDD_SETUP_DIALOG DIALOGEX 0, 0, 230, 419
+IDD_SETUP_DIALOG DIALOGEX 0, 0, 228, 416
 STYLE DS_MODALFRAME | WS_CAPTION
 CAPTION "MonetDB ODBC Data Source Setup"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_EDIT_DSN,95,40,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_DESC,95,56,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_UID,95,72,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PWD,95,88,128,14,ES_AUTOHSCROLL | ES_PASSWORD
-    EDITTEXT        IDC_EDIT_HOST,95,104,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_PORT,95,120,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_DATABASE,95,136,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_DSN,80,40,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_DESC,80,56,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_UID,80,72,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PWD,80,88,128,14,ES_AUTOHSCROLL | ES_PASSWORD
+    EDITTEXT        IDC_EDIT_HOST,80,104,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PORT,80,120,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_DATABASE,80,136,128,14,ES_AUTOHSCROLL
     LTEXT           "Data Source Name:",IDC_STATIC,7,42,63,8
     LTEXT           "Description:",IDC_STATIC,7,58,63,8
     LTEXT           "User Name:",IDC_STATIC,7,74,63,8
@@ -123,7 +123,7 @@ BEGIN
     LTEXT           "Host:",IDC_STATIC,7,106,63,8
     LTEXT           "Port:",IDC_STATIC,7,122,63,8
     LTEXT           "Database:",IDC_STATIC,7,138,63,8
-    GROUPBOX        "Advanced settings",IDC_STATIC,7,154,216,128
+    GROUPBOX        "Advanced settings",IDC_STATIC,7,154,214,132
     LTEXT           "Schema:",IDC_STATIC,12,170,63,8
     LTEXT           "Login Timeout:",IDC_STATIC,12,186,63,8
     LTEXT           "Reply Timeout:",IDC_STATIC,12,202,63,8
@@ -131,30 +131,28 @@ BEGIN
     LTEXT           "Autocommit on/off:",IDC_STATIC,12,234,63,8
     LTEXT           "Time Zone:",IDC_STATIC,12,250,63,8
     LTEXT           "Log File:",IDC_STATIC,12,266,63,8
-    EDITTEXT        IDC_EDIT_SCHEMA,95,168,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_LOGINTIMEOUT,95,184,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_REPLYTIMEOUT,95,200,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_REPLYSIZE,95,216,32,14,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_AUTOCOMMIT,95,232,10,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_TIMEZONE,95,248,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_LOGFILE,95,264,128,14,ES_AUTOHSCROLL
-    GROUPBOX        "Secure Connection",IDC_STATIC,7,298,216,96
-    LTEXT           "TLS Encrypt on/off:",IDC_STATIC,12,314,66,8
-    LTEXT           "Server Certificate:",IDC_STATIC,12,330,66,8
-    LTEXT           "Server Cert. Hash:",IDC_STATIC,12,346,70,8
-    LTEXT           "Client Key:",IDC_STATIC,12,362,63,8
-    LTEXT           "Client Certificate:",IDC_STATIC,12,388,66,8
-    EDITTEXT        IDC_EDIT_USETLS,95,312,10,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_SERVERCERT,95,328,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_SERVERCERTHASH,95,344,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_CLIENTKEY,95,360,128,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_CLIENTCERT,95,376,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SCHEMA,80,168,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_LOGINTIMEOUT,80,184,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_REPLYTIMEOUT,80,200,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_REPLYSIZE,80,216,32,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_AUTOCOMMIT,80,232,24,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_TIMEZONE,80,248,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_LOGFILE,80,264,128,14,ES_AUTOHSCROLL
+    GROUPBOX        "Secure Connection",IDC_STATIC,7,288,214,100
+    LTEXT           "TLS Encrypt on/off:",IDC_STATIC,12,304,66,8
+    LTEXT           "Server Certificate:",IDC_STATIC,12,320,66,8
+    LTEXT           "Server Cert. Hash:",IDC_STATIC,12,336,70,8
+    LTEXT           "Client Key:",IDC_STATIC,12,352,63,8
+    LTEXT           "Client Certificate:",IDC_STATIC,12,368,66,8
+    EDITTEXT        IDC_EDIT_USETLS,80,302,24,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SERVERCERT,80,318,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_SERVERCERTHASH,80,334,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_CLIENTKEY,80,350,128,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_CLIENTCERT,80,366,128,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,7,397,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,62,397,50,14
-//    PUSHBUTTON      "Test",IDC_TEST,117,397,50,14
-    PUSHBUTTON      "Test",IDOK,117,397,50,14
-//    PUSHBUTTON      "Help",IDC_HELP,172,397,50,14
-    PUSHBUTTON      "Help",IDOK,172,397,50,14
+    PUSHBUTTON      "Test",IDC_BUTTON_TEST,117,397,50,14
+    PUSHBUTTON      "Help",IDC_BUTTON_HELP,172,397,50,14
     CONTROL         2000,IDC_STATIC,"Static",SS_BITMAP,0,0,240,37
 END
 
